# fastapi-cqrs

./: README.md  docker-compose.yml
docker/: Dockerfile.dev
src/: pyproject.toml
src/schemas/: command_schemas.py  query_schemas.py
